対戦結果基本情報 送信APIを削除
